Prevent horizontal scrollbar

--- a/source/resource/designs/ceramic/basic.css
+++ b/source/resource/designs/ceramic/basic.css
@@ -535,6 +535,7 @@ body br
 {
   float:left;
   overflow: auto;
+  overflow-x: hidden;
   position: relative;
 }
 
